--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         nav_version = '2.1.0'
         lifecycle_version = '2.1.0'
         kotlin_version = '1.3.61'
+        fragment_version = '1.2.0'
     }
 
     repositories {
@@ -29,6 +30,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+
     }
 }
 
