--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         lifecycle_version = '2.1.0'
         kotlin_version = '1.3.61'
         fragment_version = '1.2.0'
-        koin_version = "2.0.1"
+        koin_version = "2.1.0-alpha-6"
     }
 
     repositories {
