--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.teaml.kidsphonelimit">
 
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -15,7 +16,11 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:taskAffinity=".MainActivity"
+            android:excludeFromRecents="true"
+            android:noHistory="true"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +29,6 @@
         </activity>
         <activity
             android:name=".ExitActivity"
-            android:autoRemoveFromRecents="true"
             android:theme="@android:style/Theme.NoDisplay"/>
 
         <receiver
