--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,12 +29,19 @@
         </activity>
         <activity
             android:name=".ExitActivity"
-            android:theme="@android:style/Theme.NoDisplay"/>
+            android:theme="@android:style/Theme.NoDisplay"
+            android:taskAffinity=".ExitActivity"
+            android:excludeFromRecents="true"
+            android:noHistory="true"
+            />
 
         <receiver
+            android:stopWithTask="false"
             android:name=".receiver.AlarmReceiver"
             android:enabled="true"
             android:exported="false" />
+
+
     </application>
 
 </manifest>
